Fix scrollbar

--- a/app/assets/stylesheets/post_show.scss
+++ b/app/assets/stylesheets/post_show.scss
@@ -144,6 +144,9 @@
   height: 80px;
   width: 80px;
 }
+::-webkit-scrollbar{
+  display: none;
+}
 .sidebar-item-title {
   display: -webkit-box;
   height: 58px;
